// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styles > should return styles.arrow.color over options.arrowColor (component level) 1`] = `
{
  "arrow": {
    "alignItems": "center",
    "color": "#ffffff",
    "display": "inline-flex",
    "justifyContent": "center",
    "position": "absolute",
  },
  "beacon": {
    "height": 36,
    "width": 36,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#000000",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(0,0,0, 0.2)",
    "border": "2px solid #000000",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "beaconWrapper": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": "50%",
    "color": "#555555",
    "cursor": "pointer",
    "display": "inline-flex",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 0,
    "position": "relative",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 12,
    "lineHeight": 1,
    "padding": 8,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 12,
  },
  "buttonPrimary": {
    "WebkitAppearance": "none",
    "backgroundColor": "#000000",
    "border": 0,
    "borderRadius": 4,
    "color": "#ffffff",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floater": {
    "display": "inline-block",
    "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
    "maxWidth": "100%",
    "transition": "opacity 0.3s",
  },
  "overlay": {
    "backgroundColor": "#00000080",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "tooltip": {
    "backgroundColor": "#ffffff",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#000000",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 12,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "paddingBottom": 12,
    "paddingTop": 12,
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles > should return styles.arrow.color over options.arrowColor (step level) 1`] = `
{
  "arrow": {
    "alignItems": "center",
    "color": "#f00",
    "display": "inline-flex",
    "justifyContent": "center",
    "position": "absolute",
  },
  "beacon": {
    "height": 36,
    "width": 36,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#000000",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(0,0,0, 0.2)",
    "border": "2px solid #000000",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "beaconWrapper": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": "50%",
    "color": "#555555",
    "cursor": "pointer",
    "display": "inline-flex",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 0,
    "position": "relative",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 12,
    "lineHeight": 1,
    "padding": 8,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 12,
  },
  "buttonPrimary": {
    "WebkitAppearance": "none",
    "backgroundColor": "#000000",
    "border": 0,
    "borderRadius": 4,
    "color": "#ffffff",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floater": {
    "display": "inline-block",
    "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
    "maxWidth": "100%",
    "transition": "opacity 0.3s",
  },
  "overlay": {
    "backgroundColor": "#00000080",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "tooltip": {
    "backgroundColor": "#ffffff",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#000000",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 12,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "paddingBottom": 12,
    "paddingTop": 12,
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles > should return the default styles 1`] = `
{
  "arrow": {
    "alignItems": "center",
    "color": "#ffffff",
    "display": "inline-flex",
    "justifyContent": "center",
    "position": "absolute",
  },
  "beacon": {
    "height": 36,
    "width": 36,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#000000",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(0,0,0, 0.2)",
    "border": "2px solid #000000",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "beaconWrapper": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": "50%",
    "color": "#555555",
    "cursor": "pointer",
    "display": "inline-flex",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 0,
    "position": "relative",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 12,
    "lineHeight": 1,
    "padding": 8,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 12,
  },
  "buttonPrimary": {
    "WebkitAppearance": "none",
    "backgroundColor": "#000000",
    "border": 0,
    "borderRadius": 4,
    "color": "#ffffff",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#000000",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floater": {
    "display": "inline-block",
    "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
    "maxWidth": "100%",
    "transition": "opacity 0.3s",
  },
  "overlay": {
    "backgroundColor": "#00000080",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "tooltip": {
    "backgroundColor": "#ffffff",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#000000",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 12,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "paddingBottom": 12,
    "paddingTop": 12,
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles > should return the inherited props' styles 1`] = `
{
  "arrow": {
    "alignItems": "center",
    "color": "#00f",
    "display": "inline-flex",
    "justifyContent": "center",
    "position": "absolute",
  },
  "beacon": {
    "height": 36,
    "width": 36,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#ff0",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,255,0, 0.2)",
    "border": "2px solid #ff0",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "beaconWrapper": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": "50%",
    "color": "#555555",
    "cursor": "pointer",
    "display": "inline-flex",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 0,
    "position": "relative",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#ff0",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 12,
    "lineHeight": 1,
    "padding": 8,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 12,
  },
  "buttonPrimary": {
    "WebkitAppearance": "none",
    "backgroundColor": "#ff0",
    "border": 0,
    "borderRadius": 4,
    "color": "#00f",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floater": {
    "display": "inline-block",
    "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
    "maxWidth": "100%",
    "transition": "opacity 0.3s",
  },
  "overlay": {
    "backgroundColor": "#00000080",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "tooltip": {
    "backgroundColor": "#00f",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#fff",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 12,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "paddingBottom": 12,
    "paddingTop": 12,
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles > should return the step's styles 1`] = `
{
  "arrow": {
    "alignItems": "center",
    "color": "#000",
    "display": "inline-flex",
    "justifyContent": "center",
    "position": "absolute",
  },
  "beacon": {
    "height": 36,
    "width": 36,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#f00",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,0,0, 0.2)",
    "border": "2px solid #f00",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "beaconWrapper": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": "50%",
    "color": "#555555",
    "cursor": "pointer",
    "display": "inline-flex",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 0,
    "position": "relative",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#f00",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 12,
    "lineHeight": 1,
    "padding": 8,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 12,
  },
  "buttonPrimary": {
    "WebkitAppearance": "none",
    "backgroundColor": "#f00",
    "border": 0,
    "borderRadius": 4,
    "color": "#000",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floater": {
    "display": "inline-block",
    "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
    "maxWidth": "100%",
    "transition": "opacity 0.3s",
  },
  "overlay": {
    "backgroundColor": "#00000080",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "tooltip": {
    "backgroundColor": "#000",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#fff",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 12,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "paddingBottom": 12,
    "paddingTop": 12,
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;
